objects/Trust_SFDC2__c.object
<CustomObject>
    <description>Research used object to capture Trust entities associated with record, SFDC2</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Trusts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Trusts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Living Trust in which the trustmaker transfers the title of a property to a trust in which the trustmaker serves as the initial Trustee.</fullName>
                </value>
                <value>
                    <fullName>A trust that cannot be altered, changed, modified or revoked after creation.</fullName>
                </value>
                <value>
                    <fullName>Protects an individual&apos;s assets from claims of future creditors. (Often Foreign)</fullName>
                </value>
                <value>
                    <fullName>Benefits a particular charity or the public.  Established as part of estate plan to lower or avoid imposition of estate or gift tax.</fullName>
                </value>
                <value>
                    <fullName>Implied Trust that is established by a court and is determined from certain facts and circumstances. (Legal entitlement but partial ownership)</fullName>
                </value>
                <value>
                    <fullName>Established for an individual who receives certain government benefits so as not to disqualify the beneficiary from such government benefits.</fullName>
                </value>
                <value>
                    <fullName>Established for a beneficiary which does not allow the beneficiary to sell or pledge away interest in the Trust.  (Protected from Creditors)</fullName>
                </value>
                <value>
                    <fullName>Created to allow one spouse to leave money to the other, while limiting the amount of Federal Estate tax that is payable on the death of the 2nd Spouse.</fullName>
                </value>
                <value>
                    <fullName>Created during the lifetime of the Grantor by depositing money into an account at a financial instution in his or her name as the trustee for another.</fullName>
                </value>
                <value>
                    <fullName>Not Identifyable by Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revocable</fullName>
                </value>
                <value>
                    <fullName>Irrevocable</fullName>
                </value>
                <value>
                    <fullName>Asset Protection</fullName>
                </value>
                <value>
                    <fullName>Charitable</fullName>
                </value>
                <value>
                    <fullName>Constructive</fullName>
                </value>
                <value>
                    <fullName>Special Needs</fullName>
                </value>
                <value>
                    <fullName>Spendthrift</fullName>
                </value>
                <value>
                    <fullName>Tax by-Pass</fullName>
                </value>
                <value>
                    <fullName>Totten</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trust</label>
    <nameField>
        <label>Trust Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trusts</pluralLabel>
    <recordTypes>
        <fullName>Account_Trust</fullName>
        <active>true</active>
        <label>Account Trust</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Trust</fullName>
        <active>true</active>
        <label>Lead Trust</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>